fixed contrast accessibility issue

--- a/styles/scss/_generalStyles.scss
+++ b/styles/scss/_generalStyles.scss
@@ -56,6 +56,7 @@ h1 {
 body {
     font-family: $bodyFont;
     font-size: 3rem;
+    background-color: #000;
 }
 
 img {
